Fix `piu'` typo

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -373,7 +373,7 @@
                     <div class="charity-details">
                         <h2>${entity.name}</h2>
                         <p>${entity.reason}</p>
-                        <a data-url="${entity.web_site}" href="#" onclick="openUrl(event)">Per saperne di piu'</a>
+                        <a data-url="${entity.web_site}" href="#" onclick="openUrl(event)">Per saperne di più</a>
                     </div>
                     <input type="radio" name="charity" class="charity-selector" value="${entity.cf}" id="input-${entity.cf}" />
                 </li>`;
