--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -26,6 +26,13 @@
         margin: 0;
         box-sizing: border-box;
         padding-top: 24px;
+
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
     section {
