Implement fixed footer

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -238,12 +238,20 @@
     .info-section {
         display: flex;
         flex: 1 1 auto;
+
+        padding-bottom: 200px;
     }
 
     .submit-section {
         margin: 0;
         padding: 0 24px;
         box-shadow: 0px -5px 20px 0px #e0e0e0;
+        background-color: white;
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     .submit-btn {
