Remove `tabindex` and `aria-role`

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -424,7 +424,7 @@
 
                     <div class="charity-selector-container">
                       <input type="radio" name="charity" class="charity-selector" value="${entity.cf}" id="input-${entity.cf}" />
-                      <label for="input-${entity.cf}" class="charity-selector-view" tabindex="0" aria-role="radio"></label>
+                      <label for="input-${entity.cf}" class="charity-selector-view"></label>
                     </div>
                 </li>`;
       return { id: entity.cf, charity, tiers };
