Remove radio percentage

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -193,8 +193,8 @@
     input.charity-selector:checked + label.charity-selector-view:after {
         content: "";
         display: block;
-        width: 70%;
-        height: 70%;
+        width: 21px;
+        height: 21px;
         background-color: var(--main-blue);
         border-radius: 100%;
     }
