Fix tier id and amount selection on submit

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -412,7 +412,7 @@
 
   function parseEntities(entities) {
     return entities.map(entity => {
-      const tiers = entity.slices.map(tier => `<li class="tier" onclick="selectTier(event)"><div class="tier-item" data-tier="${tier.nav}" aria-checked="false" data-value="false" role="radio">${printAmount(tier.amount)}</div></li>`).join("");
+      const tiers = entity.slices.map(tier => `<li class="tier" onclick="selectTier(event)"><div class="tier-item" data-tier="${tier.nav}" data-amount="${tier.amount}" aria-checked="false" data-value="false" role="radio">${printAmount(tier.amount)}</div></li>`).join("");
       const charity = `<li class="charity" id="${entity.cf}" data-charity-id="${entity.cf}" data-tiers="${encodeURI(tiers)}" onclick="selectCharity(event)">
                     <img class="charity-logo"
                          src="data:image/png;base64,${entity.base64Logo}" alt="${entity.name} logo"/>
@@ -501,10 +501,12 @@
 
   function submit() {
     try {
-      const charityId = document.querySelectorAll(".charity-selector-radio.active")[0].getAttribute("data-charity");
-      const tierNode = document.querySelectorAll(".tier-item.active")[0].getAttribute("data-tier");
-      const tierId = tierNode.getAttribute("id");
-      const tierAmount = parseInt(tierNode.getAttribute("data-amount"), 10);
+      const charityId = document.querySelectorAll(".charity-selector-radio.active")[0].dataset.charity;
+      const tierNode = document.querySelectorAll(".tier-item.active")[0];
+
+      const tierId = tierNode.dataset.tier
+      const tierAmount = parseInt(tierNode.dataset.amount, 10);
+
       const paymentPayload = {
         kind: "payment",
         payload: {
