Remove info icon focus

--- a/assets/html/donate.html
+++ b/assets/html/donate.html
@@ -370,7 +370,7 @@
 
 <section class="info-section" aria-hidden="true">
   <div id="info" class="info-box hidden">
-    <span class="info-icon">i</span>
+    <span class="info-icon" aria-hidden="true">i</span>
     <p class="info-text">
       Puoi donare con carta di credito, debito o prepagata, senza costi di commissione.
       La donazione è parzialmente detraibile
